modified new files

--- a/company_web_page.html
+++ b/company_web_page.html
@@ -1,12 +1,15 @@
 <html>
     <head>
         <title> NEW WEB PAGE</title>
+        
     </head>
     <body bgcolor="FFFFFF">
-        <center> <Img src = "images/logo.png"
+        <center> <Img src = "logo.png"
             align = "bottom" height="250" width="400">
         </Img>
         <p>My first paragraph.</p>
+        <p>.Multiple lines can be added to an option by using the --add option.</p>
     </center>
+    <a href="about_company.html"> ABOUT US</a>
     </body>
 </html>
